增加 easyPlayer 视频

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,7 @@
     <div id="app"></div>
     <script src="Cesium/Cesium.js"></script>
     <script src="//at.alicdn.com/t/font_1694499_ny5xc2s6awn.js"></script>
+    <script type="text/javascript" src="./EasyPlayer-lib.min.js"></script>
+    <script type="text/javascript" src="./EasyPlayer.swf"></script>
   </body>
 </html>
