--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>架空巡检机器人可视化管理系统</title>
     <link rel="stylesheet" href="http://192.168.1.242:3000/model/Cesium/Widgets/widgets.css">
   </head>
-  <body>
+  <body onselectstart = "return false" style = { -moz-user-select : none }>
     <div id="app"></div>
     <script src="http://192.168.1.242:3000/model/Cesium/Cesium.js"></script>
     <script src="http://192.168.1.242:3000/model/easyPlayer/EasyPlayer-lib.min.js"></script>
